stages/03b-expose-grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: ci
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32000
